# Tsighua--RS

./: CMakeLists.txt  README.md  build.sh  data_server.py  mount_daemon.sh  mount_debug.sh  pkgdeps.sh  test.sh  umount.sh
conf/: data_servers
include/: data_client.h  fuse_ops.h  id_allocator.h  kvs.h  log.h  types.h
src/: data_server.cpp  fuse_ops.cpp  main.cpp
tests/: ai_test.py  lab0.py  lab1.py  lab2_1_ops.py  lab2_2_tree.py
